tests/src/frontend/typechecking/invalid/unknown_pattern1.sk
base class Foo
class Bar<T>(T) extends Foo

fun doit<T_>(x: Foo): T_ {
  x match {
  | Bar(y) -> y
  }
}
